2011-07-18  Pratik Solanki  <psolanki@apple.com>

        Part of https://bugs.webkit.org/show_bug.cgi?id=63674
        Get webkit to compile with USE(CFNETWORK) enabled on Mac

        Reviewed by David Kilzer.

        Get coookie storage code to work with USE(CFNETWORK) enabled on Mac.

        No new tests because no change in functionality.

        * platform/network/cf/CookieStorageCFNet.cpp:
        (WebCore::defaultCookieStorage):
        (WebCore::defaultSessionCookieStorage):
        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::ResourceHandle::createPrivateBrowsingStorageSession):
        * platform/network/mac/CookieStorageMac.mm:

2011-07-18  Pratik Solanki  <psolanki@apple.com>

        Part of https://bugs.webkit.org/show_bug.cgi?id=63674
        Get webkit to compile with USE(CFNETWORK) enabled on Mac

        Reviewed by David Kilzer.

        * WebCore.exp.in:

2011-07-18  Gavin Barraclough  <barraclough@apple.com>

        Speculative fix for Leopard assertions caused by 91095.

        Rubber stamped by Sam Weinig.

        * bridge/NP_jsobject.cpp:
        (_NPN_Invoke):
            - ensure we pass the window shell, not the global object.

2011-07-18  Mark Hahnenberg  <mhahnenberg@apple.com>

        Refactor JSC to replace JSCell::operator new with static create method
        https://bugs.webkit.org/show_bug.cgi?id=64466

        Reviewed by Oliver Hunt (oliver@apple.com) and Darin Adler (darin@apple.com).

        First step in a longer refactoring process to remove the use of
        operator new overloading in order to allocate GC objects and to replace
        this method with static create methods for each individual type of heap-allocated
        JS object.  This particular patch only deals with replacing uses of
        operator new within JSC proper.  Future patches will remove it from the
        parts that interface with the DOM.  Due to the DOM's continued dependence