@@ -1,5 +1,13 @@
 2011-07-18  Pratik Solanki  <psolanki@apple.com>
 
+        Unreviewed. Fix Windows build. Move static function defaultSessionCookieStorage() to before
+        its use in defaultCookieStorage().
+
+        * platform/network/cf/CookieStorageCFNet.cpp:
+        (WebCore::defaultSessionCookieStorage):
+
+2011-07-18  Pratik Solanki  <psolanki@apple.com>
+
         Part of https://bugs.webkit.org/show_bug.cgi?id=63674
         Get webkit to compile with USE(CFNETWORK) enabled on Mac
 
